tests/negative/semantic/assign_array_whole/input.ci
void main() {
    int[] xs = [1];
    xs = [2];
}
